[package]
name = "readability-fork"
version = "0.2.3-alpha.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/jangernert/readability"
repository = "https://github.com/jangernert/readability.git"
description = "Temporary fork of 'readability' crate with updated dependencies"
keywords = ["readability"]
categories = []
edition = "2021"

[dependencies]
regex = "1"
url = "2.4"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
#lazy_static = "1.4"
once_cell = "1.18"
# tokio = "1"
#anyhow = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false 
features = ["rustls-tls"]
optional = true

[features]
default = ["reqwest"]
